# lviv_music

./: .gitignore  CMakeLists.txt  IAudio.h  README.md  authProfile.cpp  authProfile.h  feed.cpp  feed.h  lviv_music.cpp  lviv_music.db  main.cpp  noAuthProfile.cpp  noAuthProfile.h  playlist.cpp  profile.cpp  profile.h  run.bat  server.cpp  server.h  song.cpp  song.h
db/: schema.sql
include/: App.h  ArtistPublisher.h  ArtistRecommendationStrategy.h  GenreRecommendationService.h  GenreRecommendationStrategy.h  ListenerHasPlaylists.h  ListenerHasRecs.h  ListenerHasTrends.h  ListenerIdentity.h  ListenerLikesSongs.h  LocalAuthService.h  LocalSongRepository.h  LoggerLikesSongs.h  RecommendationManager.h  SQLAuthService.h  ServerSongRepository.h  User.h  authProfile.h  feed.h  noAuthProfile.h  playlist.h  server.h  song.h
include/boost/: di.hpp
include/dto/: SqliteDatabase.h  SqliteSongStore.h  SqliteUserStore.h  StoredTypes.h
include/interface/: IAudio.h  IAuthService.h  IHasPlaylists.h  IHasRecs.h  IHasTrends.h  IIdentity.h  ILikesSongs.h  ILikesStore.h  IPlaylistStore.h  IPublishesSongs.h  IRecommendationManager.h  IRecommendationService.h  IRecommendationStrategy.h  ISongRepository.h  ISongStore.h  IUserStore.h
src/: App.cpp  ArtistPublisher.cpp  ArtistRecommendationStrategy.cpp  GenreRecommendationService.cpp  GenreRecommendationStrategy.cpp  ListenerHasPlaylists.cpp  ListenerHasRecs.cpp  ListenerHasTrends.cpp  ListenerIdentity.cpp  ListenerLikesSongs.cpp  LocalAuthService.cpp  LocalSongRepository.cpp  LoggerLikesSongs.cpp  RecommendationManager.cpp  SQLAuthService.cpp  ServerSongRepository.cpp  User.cpp  authProfile.cpp  feed.cpp  main.cpp  playlist.cpp  server.cpp  song.cpp
src/dto/: SqliteDatabase.cpp  SqliteSongStore.cpp  SqliteUserStore.cpp
tests/: AuthRegisterTest.cpp  AuthTest.cpp  LocalSongRepositoryTest.cpp  SQLAuthServiceTest.cpp  ServerSongRepositoryTest.cpp
